Fix user activation v2 trigger for a WebXR input.

Bug: 843366
Change-Id: Ifa1d702a1357e4f508f708b5cf9783d0db90ad06
Reviewed-on: https://chromium-review.googlesource.com/1062009
Reviewed-by: Brandon Jones <bajones@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559190}
Former-commit-id: 47cf7037cbde6c278e987cde18da3ec8b7a86996